# chess-finder-servant-demo

./: .gitignore  README.md  back.cabal  stack.yaml
front/: .disable-ghc-mod  Makefile  front.cabal  stack.yaml
front/_devel/: Main.hs  devel.cabal  stack.yaml
front/src/: Cookies.hs  Html.hs  Main.hs
front/static/: index.html
front/static/css/: custom.css
shared/: chess-finder-shared.cabal
shared/src/ChessFinder/: Api.hs  Common.hs  Types.hs
src/: Auth.hs  GoogleDistanceMatrix.hs  Handlers.hs  Main.hs  MyPrelude.hs
src/Templates/: Instructor.hs
