Name: back
Version: 0.1
Synopsis: Web API and server for chess-finder
Description:
Author: Elliot Cameron
Maintainer: eacameron@gmail.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.10

executable back
  hs-source-dirs: src
  other-modules: Auth,
                 GoogleDistanceMatrix,
                 Handlers,
                 MyPrelude,
                 Templates.Instructor
  main-is: Main.hs
  build-depends:
    aeson,
    base,
    containers,
    chess-finder-shared,
    http-api-data,
    http-client,
    http-client-tls,
    lens,
    lucid,
    servant,
    servant-client,
    servant-lucid,
    servant-server,
    string-conv == 0.1.*,
    text,
    transformers,
    mtl,
    wai,
    warp
  other-extensions: TemplateHaskell
  default-language: Haskell2010
  default-extensions: DataKinds,
                      DeriveGeneric,
                      FlexibleContexts,
                      FlexibleInstances,
                      GeneralizedNewtypeDeriving,
                      OverloadedLists,
                      OverloadedStrings,
                      ScopedTypeVariables,
                      StandaloneDeriving,
                      TypeOperators

  ghc-options:  -O2 -threaded -Wall -Werror -fwarn-tabs -funbox-strict-fields
