Name:          chess-finder-shared
Version:       0.1
Synopsis:      Shared library for chess-finder
Description:
Author:        Elliot Cameron
Maintainer:    eacameron@gmail.com
Stability:     Experimental
Category:      Web
Build-type:    Simple
Cabal-version: >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     ChessFinder.Api,
                       ChessFinder.Common,
                       ChessFinder.Types
  other-modules:
  build-depends:
    aeson,
    base,
    http-api-data,
    lucid,
    servant,
    servant-lucid,
    text
  other-extensions:
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      DeriveGeneric,
                      FlexibleContexts,
                      GeneralizedNewtypeDeriving,
                      OverloadedLists,
                      OverloadedStrings,
                      ScopedTypeVariables,
                      StandaloneDeriving,
                      TypeOperators

  ghc-options:  -O2 -threaded -Wall -Werror -fwarn-tabs -funbox-strict-fields
