name:                devel
version:             0.1.0.0
license:             AllRightsReserved
author:              Elliot Cameron
maintainer:          eacameron@gmail.com
copyright:           2016 Elliot Cameron
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable devel
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base, process, twitch
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
